<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="auto_wallpaper_preference_screen">

    <androidx.preference.SwitchPreferenceCompat
        android:key="auto_wallpaper"
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:title="@string/off"/>

    <androidx.preference.PreferenceCategory>

        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            android:summary="@string/auto_wallpaper_info" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="auto_wallpaper_conditions"
        app:iconSpaceReserved="false"
        android:title="@string/auto_wallpaper_conditions"
        android:dependency="auto_wallpaper">

<!--        <androidx.preference.CheckBoxPreference-->
<!--            android:key="auto_wallpaper_on_wifi"-->
<!--            android:defaultValue="false"-->
<!--            app:iconSpaceReserved="false"-->
<!--            android:title="@string/auto_wallpaper_on_wifi"-->
<!--            android:summary="@string/auto_wallpaper_on_wifi_summary" />-->

<!--        <androidx.preference.CheckBoxPreference-->
<!--            android:key="auto_wallpaper_charging"-->
<!--            app:iconSpaceReserved="false"-->
<!--            android:defaultValue="false"-->
<!--            android:title="@string/auto_wallpaper_charging"-->
<!--            android:summary="@string/auto_wallpaper_charging_summary" />-->

<!--        <androidx.preference.CheckBoxPreference-->
<!--            android:key="auto_wallpaper_idle"-->
<!--            android:defaultValue="false"-->
<!--            app:iconSpaceReserved="false"-->
<!--            android:title="@string/auto_wallpaper_idle"-->
<!--            android:summary="@string/auto_wallpaper_idle_summary" />-->

        <androidx.preference.ListPreference
            android:key="auto_wallpaper_interval"
            android:defaultValue="@string/auto_wallpaper_interval_default"
            android:title="@string/auto_wallpaper_interval"
            android:dialogTitle="@string/auto_wallpaper_interval"
            android:summary="@string/auto_wallpaper_interval_summary"
            app:iconSpaceReserved="false"
            android:entries="@array/auto_wallpaper_interval_options"
            android:entryValues="@array/auto_wallpaper_interval_values" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="auto_wallpaper_source"
        app:iconSpaceReserved="false"
        android:title="@string/auto_wallpaper_source"
        android:dependency="auto_wallpaper">

        <androidx.preference.ListPreference
            android:key="auto_wallpaper_category"
            android:defaultValue="@string/auto_wallpaper_category_default"
            android:title="@string/auto_wallpaper_category"
            android:dialogTitle="@string/auto_wallpaper_category"
            android:summary="@string/auto_wallpaper_category_summary"
            app:iconSpaceReserved="false"
            android:entries="@array/auto_wallpaper_category_options"
            android:entryValues="@array/auto_wallpaper_category_values" />

        <androidx.preference.EditTextPreference
            android:key="auto_wallpaper_custom_category"
            android:defaultValue="@string/auto_wallpaper_custom_category_default"
            android:title="@string/auto_wallpaper_custom_category"
            app:iconSpaceReserved="false"
            android:summary="@string/auto_wallpaper_custom_category_summary"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/auto_wallpaper_options"
        android:dependency="auto_wallpaper">

        <androidx.preference.Preference
            android:key="auto_wallpaper_history"
            app:iconSpaceReserved="false"
            android:title="@string/auto_wallpaper_history"
            android:summary="@string/auto_wallpaper_history_summary" >

            <intent android:action="com.spjtechnology.wallpapers.activities.AutoWallpaperHistoryActivity"/>

        </androidx.preference.Preference>

        <androidx.preference.Preference/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>